Fix : Sidebar visibility animation

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1735,9 +1735,6 @@ h1, h2, h3, h4, h5, h6 {
   border-left: 1px solid var(--color-border);
   border-top: 1px solid var(--color-border);
   padding: 1.5rem 0.85rem;
-  animation: 0.5s fadeIn;
-  animation-fill-mode: forwards;
-  visibility: hidden;
 }
 @media (max-width: 767.98px) {
   .navbar.navbar-expand-md ul.vertical-nav li.nav-item.parent-menu .collapse-for-link ul.sub-menu {
@@ -1749,6 +1746,11 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0rem 1.23rem;
     width: 100%;
   }
+}
+.navbar.navbar-expand-md ul.vertical-nav ul.sub-menu .nav-item {
+  animation: 0.5s fadeIn;
+  animation-fill-mode: forwards;
+  visibility: hidden;
 }
 .navbar.navbar-expand-md ul.vertical-nav ul.sub-menu .nav-item .nav-link {
   font-size: 1rem;
